<resources>
    <string name="app_name">Plasma</string>
    <string name="name">Donate Blood Save Life</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="remember_me">Remember me? </string>
    <string name="log_in">LOG IN</string>
    <string name="sign_up">SIGN UP</string>
    <string name="forgot_pass">Forgot password?</string>
    <string name="title_activity_drawer_menu">DrawerMenu</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="communicate">Communicate</string>
    <string name="nav_home">Home</string>
    <string name="nav_profile">Profile</string>
    <string name="nav_donor">Donor List</string>
    <string name="nav_setting">New Profile</string>
    <string name="nav_share">Share</string>
    <string name="nav_about">About Us</string>
    <string name="nav_feedback">Feed Back</string>
    <string name="SignOut">Sign Out</string>
    <string name="aboutUsId">Designed and Developed by Afroza Sharmin Urmi Studying ICT at Cumilla University Email:afrozasharminurmi@gmail.com"</string>


</resources>
